welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: '=' expected but ';' found.
	var presence := 0;
                         ^